# mojimix

./: .gitignore  Cargo.toml  README.md  generate_icon.py  index.html  justfile  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  MojiMix.desktop  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: gemini.rs  lib.rs  main.rs
src/components/: EmojiPicker.tsx  GenerateButton.tsx  HistoryPanel.tsx  ImagePreview.tsx  SelectionPanel.tsx  TextModifier.tsx
src/hooks/: useGeminiGeneration.ts
src/types/: index.ts
